--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
   </head>
   <body>
 
+    <div class="header">
+       <img src="./images/river-forest-mountain-landscape.webp" alt="a logo of a mountain with a forest and river" height="40" width="40">
+      <ul>
+        <li class="links" header link one></li>
+        <li class="links" header link two></li>
+        <li class="links" header link three></li>
+      </ul>
+      <button> Sign up for adventure </button>
+    </div>
+
+    <main>
+      <div>
+        <p>Hiking: A path to nature</p>
+        <p>A great man once wrote "It's a dangerous business, Frodo, going out of your door. You step into the road, and if you don't keep your feet, there's no knowing where you might be swept off too.”
+           I consider that an opportunity.</p>
+        <img src="./images/Four People Walking on Gray Path Surrounded by Tall Trees.jpeg" alt="four people walking on a gray pather surrounded by tall trees" height="140" width="140">     
+      </div>
+
+      <div>
+        <p> Our adventures</p>
+        <img src="./images/Back View of a Person in Winter Clothing Walking Alone on Snow Covered Ground.webp" alt="Back View of a Person in Winter Clothing Walking Alone on Snow Covered Ground" height="100" width="100">
+        <p>Conquer the mountain snow!</p>
+        <img src="./images/Person Inside Dome Tent on Cliff.jpeg" alt="Person Inside Dome Tent on Cliff" height="100" width="100">
+        <p>Stay in a room with a view</p>
+        <img src="./images/Silhouette of Person Standing Near Camping Tent.jpeg" alt="Silhouette of Person Standing Near Camping Tent" height="100" width="100">
+        <p>Watch the sun rise</p>
+        <img src="./images/Topless Man in Black Shorts Dipping in Lake Water.jpeg" alt="Topless Man in Black Shorts Dipping in Lake Water" height="100" width="100">
+        <p>Soak in your surroundings</p>
+      </div>
+
+
+
+
+      </div>
+
+
+
+
+
+
+
+
+    </main>
+
 
 
 
